--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -7,5 +7,5 @@ baseUrl=http://localhost:8080
 
 # Stubs can be enabled by uncommenting the line below.
 # But, better to enable the stub server via a command line parameter: -Dspring.profiles.active=stub
-spring.profiles.active=stub
+#spring.profiles.active=stub
 
