--- a/consumer/src/main/resources/application-stub.properties
+++ b/consumer/src/main/resources/application-stub.properties
@@ -3,6 +3,4 @@ baseUrl=http://localhost:9999
 
 # what stubs to load
 stubrunner.ids=nl.sourcelabs.spring.cloud.contract.demo:producer:+:9999
-
-# use local dependencies
-stubrunner.work-offline=true
+stubrunner.stubs-mode=local
