--- a/consumer/src/test/resources/application.properties
+++ b/consumer/src/test/resources/application.properties
@@ -2,7 +2,7 @@
 baseUrl=http://localhost:9898
 
 # what stubs to load
-stubrunner.ids=com.bol.spring.cloud.contract.demo:server:+:9898
+stubrunner.ids=nl.sourcelabs.spring.cloud.contract.demo:producer:+:9898
 
 # use local dependencies
 stubrunner.work-offline=true
