--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <kotlin.version>1.2.41</kotlin.version>
-        <spring-cloud-contract.version>2.0.0.RC2</spring-cloud-contract.version>
+        <spring-cloud-contract.version>2.0.0.RELEASE</spring-cloud-contract.version>
         <jackson.version>2.9.2</jackson.version>
     </properties>
 
